--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "app/build",
     "rootDir": "src",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
